--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,10 @@ h1 {
   line-height: 1.1;
 }
 
+.white-text {
+  color: white;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
